sfSandBoxCode/force-app/main/default/objects/Recruitment_Requisition__c/Recruitment_Requisition__c.object-meta.xml
<CustomObject>
    <label>Recruitment Requisition</label>
    <nameField>
        <label>Recruitment Requisition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recruitment Requisitions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>