sfSandBoxCode/force-app/main/default/objects/Recruitment_Requisition__c/fields/Approving_Director__c.field-meta.xml
<CustomField>
    <fullName>Approving_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approving Director</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Recruitment_Requisitions1</relationshipName>
    <type>Lookup</type>
</CustomField>