sfSandBoxCode/force-app/main/default/objects/Recruitment_Requisition__c/fields/Auto_Decline_Date__c.field-meta.xml
<CustomField>
    <fullName>Auto_Decline_Date__c</fullName>
    <description>Date for which applicants to this Requisition will be notified as unsuccessful if Status still in Open</description>
    <inlineHelpText>Date for which applicants to this Requisition will be notified as unsuccessful if Status still in Open</inlineHelpText>
    <label>Auto Decline Date</label>
    <type>Date</type>
</CustomField>