sfSandBoxCode/force-app/main/default/objects/Recruitment_Requisition__c/fields/Candidate_Specification__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Specification__c</fullName>
    <label>Candidate Specification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Kenyan</fullName>
                <default>true</default>
                <label>Kenyan</label>
            </value>
            <value>
                <fullName>Any Nationality</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>