sfSandBoxCode/force-app/main/default/objects/Recruitment_Requisition__c/fields/Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Date__c</fullName>
    <formula>Proposed_Employee_required_Date__c + ( ( 365 / 12 ) * Duration_of_Fixed_term_Contract_Months__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract End Date</label>
    <type>Date</type>
</CustomField>