sfSandBoxCode/force-app/main/default/objects/Recruitment_Requisition__c/fields/Date_of_Departure__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Departure__c</fullName>
    <label>Date  of Departure</label>
    <type>Date</type>
</CustomField>