sfSandBoxCode/force-app/main/default/objects/Recruitment_Requisition__c/fields/Duration_of_Fixed_term_Contract_Months__c.field-meta.xml
<CustomField>
    <fullName>Duration_of_Fixed_term_Contract_Months__c</fullName>
    <label>Duration of Fixed term Contract (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>