sfSandBoxCode/force-app/main/default/objects/Recruitment_Requisition__c/fields/Employee_Role__c.field-meta.xml
<CustomField>
    <fullName>Employee_Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee Role</label>
    <referenceTo>Employee_Role__c</referenceTo>
    <relationshipLabel>Recruitment Requisitions</relationshipLabel>
    <relationshipName>Recruitment_Requisitions</relationshipName>
    <type>Lookup</type>
</CustomField>