sfSandBoxCode/force-app/main/default/objects/Recruitment_Requisition__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <label>Job Posting End Date</label>
    <type>Date</type>
</CustomField>