sfSandBoxCode/force-app/main/default/objects/Recruitment_Requisition__c/fields/Incoming_Staff__c.field-meta.xml
<CustomField>
    <fullName>Incoming_Staff__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Incoming Staff</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Recruitment Requisitions (Incoming Staff)</relationshipLabel>
    <relationshipName>Recruitment_Requisitions2</relationshipName>
    <type>Lookup</type>
</CustomField>