sfSandBoxCode/force-app/main/default/objects/Recruitment_Requisition__c/fields/Is_recruitment_budgeted__c.field-meta.xml
<CustomField>
    <fullName>Is_recruitment_budgeted__c</fullName>
    <label>Is recruitment budgeted</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>