sfSandBoxCode/force-app/main/default/objects/Recruitment_Requisition__c/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <label>Job Title</label>
    <length>40</length>
    <type>Text</type>
</CustomField>