sfSandBoxCode/force-app/main/default/objects/Recruitment_Requisition__c/fields/Joblink_URL__c.field-meta.xml
<CustomField>
    <fullName>Joblink_URL__c</fullName>
    <formula>&quot;http://localhost/SANERGY-CAREERS-WEBSITE-V4/application.php?id=&quot;+  Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Joblink URL</label>
    <type>Text</type>
</CustomField>