sfSandBoxCode/force-app/main/default/objects/Recruitment_Requisition__c/fields/Justification_for_Additional_staff__c.field-meta.xml
<CustomField>
    <fullName>Justification_for_Additional_staff__c</fullName>
    <label>Justification for Additional staff</label>
    <type>TextArea</type>
</CustomField>