sfSandBoxCode/force-app/main/default/objects/Recruitment_Requisition__c/fields/Justification_for_new_position__c.field-meta.xml
<CustomField>
    <fullName>Justification_for_new_position__c</fullName>
    <label>Justification for new position</label>
    <type>TextArea</type>
</CustomField>