sfSandBoxCode/force-app/main/default/objects/Recruitment_Requisition__c/fields/Justification_for_replacement__c.field-meta.xml
<CustomField>
    <fullName>Justification_for_replacement__c</fullName>
    <label>Justification for replacement</label>
    <type>TextArea</type>
</CustomField>