sfSandBoxCode/force-app/main/default/objects/Recruitment_Requisition__c/fields/Line_Manager__c.field-meta.xml
<CustomField>
    <fullName>Line_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Line Manager</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Recruitment Requisitions (Line Manager)</relationshipLabel>
    <relationshipName>Recruitment_Requisitions4</relationshipName>
    <type>Lookup</type>
</CustomField>