sfSandBoxCode/force-app/main/default/objects/Recruitment_Requisition__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sameer</fullName>
                <default>true</default>
                <label>Sameer</label>
            </value>
            <value>
                <fullName>Kinanie</fullName>
            </value>
            <value>
                <fullName>Mathare</fullName>
            </value>
            <value>
                <fullName>Mukuru</fullName>
            </value>
            <value>
                <fullName>Field</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>