sfSandBoxCode/force-app/main/default/objects/Recruitment_Requisition__c/fields/Name_of_exiting_staff__c.field-meta.xml
<CustomField>
    <fullName>Name_of_exiting_staff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Name of exiting staff</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Recruitment Requisitions (Name of exiting staff)</relationshipLabel>
    <relationshipName>Recruitment_Requisitions1</relationshipName>
    <type>Lookup</type>
</CustomField>