sfSandBoxCode/force-app/main/default/objects/Recruitment_Requisition__c/fields/Number_of_Required_Staff__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Required_Staff__c</fullName>
    <label>Number of Required Staff</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>