sfSandBoxCode/force-app/main/default/objects/Recruitment_Requisition__c/fields/Post_Job__c.field-meta.xml
<CustomField>
    <fullName>Post_Job__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Post Job</label>
    <type>Checkbox</type>
</CustomField>