sfSandBoxCode/force-app/main/default/objects/Recruitment_Requisition__c/fields/Proposed_Employee_required_Date__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Employee_required_Date__c</fullName>
    <label>Proposed Employee required Date</label>
    <type>Date</type>
</CustomField>