sfSandBoxCode/force-app/main/default/objects/Recruitment_Requisition__c/fields/Reason_For_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Coverage__c</fullName>
    <label>Reason For Coverage</label>
    <type>TextArea</type>
</CustomField>