sfSandBoxCode/force-app/main/default/objects/Recruitment_Requisition__c/fields/Reason_for_Departure__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Departure__c</fullName>
    <label>Reason for Departure</label>
    <type>TextArea</type>
</CustomField>