sfSandBoxCode/force-app/main/default/objects/Recruitment_Requisition__c/fields/Requesting_Department_Team_Lead__c.field-meta.xml
<CustomField>
    <fullName>Requesting_Department_Team_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requesting Department Team Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Recruitment_Requisitions</relationshipName>
    <type>Lookup</type>
</CustomField>