sfSandBoxCode/force-app/main/default/objects/Recruitment_Requisition__c/fields/Requestor__c.field-meta.xml
<CustomField>
    <fullName>Requestor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requestor</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Recruitment Requisitions</relationshipLabel>
    <relationshipName>Recruitment_Requisitions</relationshipName>
    <type>Lookup</type>
</CustomField>