sfSandBoxCode/force-app/main/default/objects/Recruitment_Requisition__c/fields/Staff_to_be_Covered__c.field-meta.xml
<CustomField>
    <fullName>Staff_to_be_Covered__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Staff to be Covered</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Recruitment Requisitions (Staff to be Covered)</relationshipLabel>
    <relationshipName>Recruitment_Requisitions3</relationshipName>
    <type>Lookup</type>
</CustomField>