sfSandBoxCode/force-app/main/default/objects/Recruitment_Requisition__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Recruitment In Progress</fullName>
            </value>
            <value>
                <fullName>Talent Partner Approved</fullName>
            </value>
            <value>
                <fullName>Line Manager Approved</fullName>
            </value>
            <value>
                <fullName>Team Lead Approved</fullName>
            </value>
            <value>
                <fullName>Finance Approved</fullName>
            </value>
            <value>
                <fullName>Director Approved</fullName>
            </value>
            <value>
                <fullName>Talent Partner Rejected</fullName>
            </value>
            <value>
                <fullName>Line Manager Rejected</fullName>
            </value>
            <value>
                <fullName>Team Lead Rejected</fullName>
            </value>
            <value>
                <fullName>Finance Rejected</fullName>
            </value>
            <value>
                <fullName>Director Rejected</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>