sfSandBoxCode/force-app/main/default/objects/Recruitment_Requisition__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <label>Job Posting Start Date</label>
    <type>Date</type>
</CustomField>