sfSandBoxCode/force-app/main/default/objects/Recruitment_Requisition__c/fields/Talent_Partner__c.field-meta.xml
<CustomField>
    <fullName>Talent_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Talent Partner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Recruitment_Requisitions2</relationshipName>
    <type>Lookup</type>
</CustomField>