sfSandBoxCode/force-app/main/default/objects/Recruitment_Requisition__c/fields/Type_of_employment__c.field-meta.xml
<CustomField>
    <fullName>Type_of_employment__c</fullName>
    <label>Type of employment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fixed term contract</fullName>
            </value>
            <value>
                <fullName>Maternity Coverage</fullName>
            </value>
            <value>
                <fullName>Permanent</fullName>
            </value>
            <value>
                <fullName>Fellow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>