sfSandBoxCode/force-app/main/default/objects/Recruitment_Requisition__c/recordTypes/Recruitment_Requisition_Additional_Staff.recordType-meta.xml
<RecordType>
    <fullName>Recruitment_Requisition_Additional_Staff</fullName>
    <active>true</active>
    <label>Recruitment Requisition- Additional Staff</label>
</RecordType>