sfSandBoxCode/force-app/main/default/objects/Recruitment_Requisition__c/validationRules/Number_of_required_employees.validationRule-meta.xml
<ValidationRule>
    <fullName>Number_of_required_employees</fullName>
    <active>false</active>
    <errorConditionFormula>false</errorConditionFormula>
    <errorDisplayField>Approving_Director__c</errorDisplayField>
    <errorMessage>You have exceeded the number of required staff for this Recruitment Requisition</errorMessage>
</ValidationRule>