sfSandBoxCode/force-app/main/default/objects/Recruitment_Requisition__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Employee_Role__c</columns>
    <columns>Number_of_Required_Staff__c</columns>
    <columns>Is_recruitment_budgeted__c</columns>
    <columns>Type_of_employment__c</columns>
    <columns>Requestor__c</columns>
    <columns>Requesting_Department__c</columns>
    <columns>Proposed_Employee_required_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>