sfSandBoxCode/force-app/main/default/objects/Recruitment_Requisition__c/listViews/HR_Admin_Recruitment_Requisition.listView-meta.xml
<ListView>
    <fullName>HR_Admin_Recruitment_Requisition</fullName>
    <filterScope>Queue</filterScope>
    <label>HR Admin</label>
    <queue>HR_Admin</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>