sfSandBoxCode/force-app/main/default/objects/Recruitment_Requisition__c/listViews/Talent_Director_Recruitment_Requisition.listView-meta.xml
<ListView>
    <fullName>Talent_Director_Recruitment_Requisition</fullName>
    <filterScope>Queue</filterScope>
    <label>Talent Directors</label>
    <queue>Talent_Director</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>